--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "body-parser": "^1.20.0",
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
+    "handlebars": "^4.7.7",
+    "hbs": "^4.2.0",
     "mongoose": "^6.5.4",
     "multer": "^1.4.5-lts.1",
     "pug": "^3.0.2",
