--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "animate.css": "^4.1.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
+    "cookie-parser": "^1.4.6",
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
+    "express-session": "^1.17.3",
     "handlebars": "^4.7.7",
     "hbs": "^4.2.0",
     "mongoose": "^6.5.4",
