--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "animate.css": "^4.1.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
+    "connect-redis": "^6.1.3",
     "cookie-parser": "^1.4.6",
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
@@ -23,6 +24,7 @@
     "multer": "^1.4.5-lts.1",
     "pug": "^3.0.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "redis": "^3.1.2"
   }
 }
