--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "nodemon server.js",
+    "build:tailwindcss": "tailwindcss build public/css/main.css -o dist/output.css"
   },
   "author": "Aaron Jevil Nazareth",
   "license": "ISC",
@@ -26,5 +27,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "redis": "^3.1.2"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.2.6"
   }
 }
